--- a/assets/html/signin.html
+++ b/assets/html/signin.html
@@ -18,8 +18,8 @@
       /* Estilo para o botão Suporte */
       .support-button {
         background: transparent;
-        color: #043709; /* Cor azul clara */
-        border: 2px solid #13ab22; /* Contorno azul claro */
+        color: #4ce25e; /* Cor azul clara */
+        border: 2px solid #068010; /* Contorno azul claro */
         padding: 5px 10px;
         cursor: pointer;
         font-size: 14px;
@@ -27,8 +27,8 @@
       }
 
       .support-button:hover {
-        background: #4ce861; /* Cor de fundo ao passar o mouse */
-        color: rgb(1, 1, 1)707; /* Cor do texto ao passar o mouse */
+        background: #47d631; /* Cor de fundo ao passar o mouse */
+        color: rgb(21, 21, 21)707; /* Cor do texto ao passar o mouse */
       }
 
       /* Adicione margem superior para separar do link de cadastro */
@@ -41,7 +41,7 @@
   <body>
     <div class="container">
       <div class="card">
-        <h1>Entrar</h1>
+        <h1>Login</h1>
 
         <div id="msgError"></div>
 
