--- a/assets/html/cadastro.html
+++ b/assets/html/cadastro.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-  />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="../css/cadastro.css" />
   <title>Lista de Clientes</title>
 </head>
@@ -24,8 +21,8 @@
       </div>
 
       <div class="button-container">
-        <button class="action-button" onclick="excluirClientes()">Excluir Cliente(s)</button>
-        <button class="action-button" onclick="voltarParaCadastro()">Voltar para Cadastro</button>
+        <button id="excluirClientesBtn" class="action-button">Excluir Cliente(s)</button>
+        <button id="voltarParaCadastroBtn" class="action-button">Voltar para Cadastro</button>
       </div>
     </div>
   </div>
